fix(search,post): Sua tum lum